--- a/styles.css
+++ b/styles.css
@@ -5,29 +5,63 @@
 }
 
 .container {
-  outline: 2px solid black;
   max-width: 70%;
   margin: 0 auto;
 }
 
 .card-wrapper {
-  outline: 5px solid red;
   max-width: 50%;
   padding: 10px;
 }
 
 .card {
-  outline: 5px solid orange;
-  max-width: 50%;
-  /* padding: 20px; */
+  max-width: 30%;
+  border: #e8e8eb;
+  border-radius: 5px;
+  box-shadow: 0 0 5px 2px rgba(55, 54, 54, 0.25);
+}
+
+.card-content {
+  display: flex;
+  gap: 18px;
+  padding: 20px 10px;
+}
+
+.pic_img {
+  height: 50px;
+  width: 70px;
+  display: flex;
+}
+
+.title {
+  font-family: "Poppins", sans-serif;
+}
+
+.info {
+  padding: 10px 0 0 0;
+  color: #656262;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.link_text_arrow {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 10px 10px;
+  font-family: arial;
+  color: #656262;
 }
 
 .icon_arrow {
-  outline: 1px solid black;
-  max-width: 50px;
+  max-width: 20px;
 }
 
-.icon_arrow img {
+img {
   width: 100%;
   display: block;
+}
+
+.card:hover {
+  background-color: #e8e8eb;
+  box-shadow: 0 0 0.25em 0.25em rgba(0, 0, 0, 0.25);
 }
