--- a/styles.css
+++ b/styles.css
@@ -7,14 +7,17 @@
 .container {
   max-width: 70%;
   margin: 0 auto;
+  outline: 5px solid black;
 }
 
 .card-wrapper {
+  outline: 5px solid red;
   max-width: 50%;
   padding: 10px;
   display: flex;
-  gap: 20px;
+  gap: 40px;
   margin: 0 auto;
+  flex-wrap: wrap;
 }
 
 .card {
