--- a/styles.css
+++ b/styles.css
@@ -5,23 +5,23 @@
 }
 
 .container {
+  padding-top: 20px;
   max-width: 70%;
   margin: 0 auto;
-  outline: 5px solid black;
 }
 
 .card-wrapper {
-  outline: 5px solid red;
-  max-width: 50%;
-  padding: 10px;
+  max-width: 1100px;
+  padding: 20px;
   display: flex;
+  justify-content: space-evenly;
   gap: 40px;
   margin: 0 auto;
   flex-wrap: wrap;
 }
 
 .card {
-  max-width: 30%;
+  max-width: 250px;
   border: #e8e8eb;
   border-radius: 5px;
   box-shadow: 0 0 5px 2px rgba(55, 54, 54, 0.25);
